[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/investigation_v3.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/case_3/trial_1/apretrial_day1.gd" type="Script" id=2]
[ext_resource path="res://sprites/background/alobbyschool_bg.png" type="Texture" id=3]
[ext_resource path="res://scenes/character_scenes/character_egorich.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/character_scenes/character_temichlegs.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/character_scenes/character_write.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/character_scenes/character_sewa.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/character_scenes/character_layton.tscn" type="PackedScene" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="back_ground" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
centered = false

[node name="characters_all" type="Node2D" parent="."]
position = Vector2( -1, -115 )

[node name="character_egorich" parent="characters_all" instance=ExtResource( 4 )]
visible = false
position = Vector2( 1, 115 )

[node name="character_temich" parent="characters_all" instance=ExtResource( 5 )]
position = Vector2( 10.5947, 190.703 )

[node name="character_sewa" parent="characters_all" instance=ExtResource( 7 )]
visible = false
position = Vector2( 4.23792, 130.314 )

[node name="character_lentoln" parent="characters_all" instance=ExtResource( 8 )]
visible = false
position = Vector2( -25, 171 )

[node name="character_werur" parent="characters_all" instance=ExtResource( 6 )]
visible = false
position = Vector2( -15, 190.703 )

[node name="POIs" type="Node2D" parent="."]

[node name="investigation_screen" parent="." instance=ExtResource( 1 )]
