extends Node2D
var Anims
var Dialogue
var Chats
var Shows
var Moves
var Ev
var Music
var EvCount
var loc_file = ConfigFile.new()
var read_chats
var check_for_read_chats
var goto_when_read
var NoShow
var BoxColor
func _ready():
	BoxColor = Color(0.5,1,0.5,1)
	Dialogue = [ # диалоги. 
		"9 октября. 13:30. Лицей 99, 2-й этаж, атриум 2|G|---|---|---", #"Проверка провалена|R|character_masha hey|START omen|REACT damage",
		"Тёмыч: Почему это место называется 'Атриум 2'?|W|character_temich kekk|START prelude_trial",
		"Это же обычный коридор, нет?|W",
		"Егорыч: С твоей деятельностью, этот конкретный коридор получил большую популярность.",
		"Это второе по посещаемости место в школе, после главного входа, разве что.",
		"Тёмыч: А если я буду продвигать на судах идею входа в школу через окно, то неужели оконные рамы станут самыми посещаемыми?|W|character_temich dadada",
		"Егорыч: Как будто ты будешь еще адвокатить.",
		"Тёмыч: А, ну да.|W|character_temich default",
		"БЛИН! НУ ПОЧЕМУ?!|W|character_temich rage|STOP all",
		"Какое злое зло я сделал преступнику, что меня надо было подставлять и обвинять в краже?!",
		"Краже! У друзей!",
		"Как я могу обворовать тебя? Ты ж мне люлей отвесишь и маслину в лоб запустишь, уже не говорю о том, что ты - мой лучший друг и помощник с самого пятого класса!",
		"А Соню? Опуская твои шип-шипы, типа смешные, она тоже отвесит люлей мне",
		"узнав, что я скоммуниздил у неё деньги",
		"Егорыч: (Ну, у неё, как оказалось, денег и не было.)|B",
		"(У него дипломатическая неприкосновенность в этом плане, хах)",
		"Тёмыч: Кто же, Егогорыч?|W",
		"Это либо Беркут под руководством своего не связанного с мозгом сердешка, либо Жека под руководством Дашкерина",
		"Егорыч: Но никому из них ты дорогу не переходил. Может, ты просто под руку попался? Может, это ни один из них, а какой-то карманник, который сбросил своё добро тебе, когда его чуть не поймали?",
		"Тёмыч: Вспомни правило 228337 адвокатского ремесла, Егорыч",
		"Догадываться - вредно для здоровья.|W|character_temich kekk",
		"Выдумывать третье лицо, которое совершило преступление вместе с четвертым лицом, которому помогло пятое лицо и шестое лицо - прямой путь к кердыку.",
		"Чапалах от Лентольны - мне же хуже.",
		"Егорыч: Постараюсь тебя не подвести.|W|character_temich default",
		"Тёмыч: А, и еще, Егорыч, хочу тебя предупредить.|W|character_temich wonder",
		"Ты - мой лучший друг, один из самых близких людей",
		"Кем бы ни был виновник, будь готов, что он может в любой момент съехать с меня на тебя.",
		"Егорыч: В смысле?",
		"Тёмыч: Вполне возможно, что виновник постарается дискредитировать и тебя.|W|character_temich comeon",
		"Именно по этому признаку и можно выяснить, кто на самом деле - преступник!",
		"Е. Анатольевна: Так, ребята, все свидетели на месте. Вер, расфасуешь позже!|W|character_lentoln kek",
		"В. Юрьевна: Угу.|W|character_werur default",
		"OUT",
	]
	Chats = [
		"Как экскурсия?;84",
		"Соня;97",
		"'Некое дело';133",
		"ЗМЛ 99;293",
	]
	Moves = [
		"",
		"",
		"",
		"",
	]
	Shows = [
		"badge 287",
		"badge 287",
		"badge 287",
	]
	check_for_read_chats = false
	read_chats = [false,false,false,false]
